# FFmpegTranscoding

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fish/ffmpegtranscoding/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  native-lib.cpp
app/src/main/cpp/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
app/src/main/cpp/include/libx264/: x264_config.h
app/src/main/java/com/fish/ffmpegtranscoding/: CmdList.java  FFmpegCmd.java  FFmpegUtil.java  MainActivity.java  MainFFmpegActivity.java  MyApplication.java  OnVideoProcessListener.java  ResultActivity.java
app/src/main/java/com/fish/ffmpegtranscoding/callback/: RecordProgressCallback.java
app/src/main/java/com/fish/ffmpegtranscoding/entry/: ConfigTicket.java  TaskTicket.java
app/src/main/java/com/fish/ffmpegtranscoding/utils/: RealPathFromUriUtils.java
app/src/main/res/layout/: activity_main.xml  activity_result.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fish/ffmpegtranscoding/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
